# warehouse_amr_ros2

./: .gitignore  README.md
docs/: integration_contracts.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/my_robot_description/share/my_robot_description/: package.sh
ros2_ws/install/tf2_demo_cpp/lib/tf2_demo_cpp/: dynamic_broadcaster  listener
ros2_ws/log/: latest_build
ros2_ws/src/amr_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/amr_bringup/launch/: full_system.launch.py
ros2_ws/src/amr_control/: CMakeLists.txt  package.xml
ros2_ws/src/amr_control/config/: task_manager.yaml
ros2_ws/src/amr_control/src/: pid_controller.cpp  task_manager.cpp
ros2_ws/src/amr_description/: CMakeLists.txt  package.xml
ros2_ws/src/amr_description/launch/: description.launch.py
ros2_ws/src/amr_description/meshes/: .gitkeep
ros2_ws/src/amr_description/urdf/: base.xacro  materials.xacro  robot.urdf.xacro  ros2_control.xacro  sensors.xacro
ros2_ws/src/amr_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/amr_gazebo/launch/: gazebo.launch.py
ros2_ws/src/amr_gazebo/worlds/: warehouse_world.sdf
ros2_ws/src/amr_navigation/: CMakeLists.txt  package.xml
ros2_ws/src/amr_navigation/config/: amcl_params.yaml  nav2_params.yaml  slam_params.yaml
ros2_ws/src/amr_navigation/launch/: localization.launch.py  navigation.launch.py  slam.launch.py
ros2_ws/src/amr_navigation/maps/: warehouse_map.pgm  warehouse_map.yaml
ros2_ws/src/amr_perception/: CMakeLists.txt  package.xml
ros2_ws/src/amr_perception/config/: yolo_params.yaml
ros2_ws/src/amr_perception/src/: yolo_perception_node.cpp
ros2_ws/src/my_robot_description/urdf/: robot.urdf
ros2_ws/src/tf2_demo_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/tf2_demo_cpp/src/: dynamic_broadcaster.cpp  listener.cpp
(+7 files in other folders)
